syntax = "proto3";
package quip;
option go_package="github.com/GambitLLC/quip/libs/pb";

import "quip-messages.proto";
import "google/protobuf/empty.proto";

message StartQueueRequest {
  string gamemode = 1;
}

message StatusResponse {
  Status status = 1;

  // Details about current queue status.
  optional QueueDetails queue = 2;

  // Details about the match the user is currently playing in.
  optional MatchDetails match = 3;
}

service Matchmaker {
  // GetStatus returns the current matchmaking status.
  rpc GetStatus(google.protobuf.Empty) returns (StatusResponse);

  // StartQueue starts searching for a match with the given parameters.
  rpc StartQueue(StartQueueRequest) returns (google.protobuf.Empty);

  // StopQueue stops searching for a match. Idempotent.
  rpc StopQueue(google.protobuf.Empty) returns (google.protobuf.Empty);
}